# sea_battle

./: CMakeLists.txt  main.cpp
include/: CommandProcessor.hpp  Game.hpp  Ship.hpp
src/: CommandProcessor.cpp  Game.cpp  WebServer.cpp
web/: index.html  script.js  styles.css
